# rexecutor

./: Cargo.toml  Makefile.toml  README.md  docker-compose.yml
.github/workflows/: ci.yaml
examples/postgres/: Cargo.toml
examples/postgres/src/: main.rs
rexecutor/: Cargo.toml  Makefile.toml
rexecutor-redis/: Cargo.toml
rexecutor-redis/src/: lib.rs
rexecutor-sqlx/: Cargo.toml  Makefile.toml
rexecutor-sqlx/.sqlx/: query-04906338f4ceb6964e7bf1b1d21829a5fa3e6f6f3ee551734e80f4de06776125.json  query-19844d1b33cde0a421a91b71ae9cf3a5bdcf79824f89ef2b9b4868e9791c5386.json  query-1e5b366a88edd9fadc699603d3efd18b2495da0e7af46da3dfb0c0184efb511d.json  query-1ec1c08c6e9c4f31a2ed044fa6adc48fca7be5dc41dc6be1033d986dcc0c1ce2.json  query-2bec39e24ac3de92be30a55ad542dbcdfa565c8e3e02ab7a63415d4243630899.json  query-3d7067241f872ace4cf5c1967e916888416abc9b91dc09b9a0ee0401795447dd.json  query-40c73f5bd0b732c38786cc67dcdfd15d139bc28fe7aa79fdecb5a33bcf5f5448.json  query-568cac2c82cb4eaeb3c2db06df13516787771c2f32389b24a541d3ba03f79856.json  query-5db83c1a2d38fa48bc252b531aa05add91257840c4170cb8e21a06387a957b44.json  query-6f2265238d294f53595a59cc480cda1e402146020cd452c290b9600525ab571c.json  query-6f3ee22af6b421481db20de1fc34f28c481c60da6e61f719414201ac6f827d39.json  query-70857021093f7a11dc074735582ad6c955e0cf9659fdc6f5f4aa32d2d39ef326.json  query-7b1516c581922e68684affe27660bad25c1fe0678ceac6780226e394122cf1f5.json  query-954ea4fc0f373fbbabf3794a2ae19316215ae627d1401941a076483004800355.json  query-b4ae90e071f3748a6aa420793e3976004ffd62d59bf40e6dca689d739146bcd5.json  query-bd091782ae08e488d00357783d29422ce77350293ab2dcbcf8f689d2fd555a17.json  query-bfeb0323511d90255cfc3c869a3aa9303816c35bab911e9f448af9e112e07602.json  query-c1d4bb977fa318668f325105b757d54529e365c53451ba93029cf2e6a4b9634c.json  query-c788a7366fb568be131ad8cfb9670dcf5bd0a89e45855e34268701cafae8053c.json  query-cd29216fca6ce86fc302a2960d71d2f731f1b94b35978095ac59e542c4d09e18.json  query-cd6a3edb79b33f25b8afd788b1563f6fb686468f0d8767a67f31bb266dde03e7.json  query-d0bf2370c9f973f10326ba7a245af1113d5d391c00ec5cf4bfa50f490a5cff04.json  query-d5fc8a0b94cd28eeb09104dce5ab390bf09a69e3f166afa052390c3b77ec187e.json  query-dbb28ede0cb813f506cde104824d7664e0ac2eefeb894a7935e34555f3c24611.json  query-e7b96e7fac4f78666c9d85e4ec64de60807f4f6c13decf1f4dc571ce3953dffd.json  query-eeeb58dc4cd6e1f269bd8c13fecb5df0107bb3e030563ea21bffeaf0359c5cb2.json  query-efc792a57ac3412e59173ab7abb4f58401c86cb2f6aaca460aa39abc19d17395.json  query-f909c92db0f01433016a98afab5c4ad487f71369b18cb94ec0bedb916adc72e2.json  query-ff40bd3354e29db4fc31733fa1217e9dcd2de416225563f85cba857761bb2ca3.json
rexecutor-sqlx/migrations/: 20240330221437_add-job-table.down.sql  20240330221437_add-job-table.up.sql
rexecutor-sqlx/src/: backend.rs  lib.rs  query.rs  stream.rs  types.rs  unique.rs
rexecutor/src/: backend.rs  backoff.rs  cron_runner.rs  executor.rs  global_backend.rs  job.rs  lib.rs  notifier.rs  prelude.rs  pruner.rs  testing.rs
rexecutor/src/backend/: memory.rs  queryable.rs  testing.rs
rexecutor/src/job/: builder.rs  query.rs  runner.rs  uniqueness_criteria.rs
rexecutor/src/pruner/: runner.rs
src/: backend.rs  executor.rs  job.rs  lib.rs
src/job/: builder.rs
