[package]
name = "rexecutor-sqlx"
version = "0.1.0"
edition = "2021"

authors = ["John Bell <bell.john.andrew@gmail.com>"]

license = "MIT OR Apache-2.0"

readme = "../README.md"
description = "A robust job processing library"
repository = "https://github.com/Johnabell/rexecutor.git"

keywords = ["job", "processing", "tasks"]
categories = ["asynchronous"]

[dependencies]
rexecutor = { path = "../rexecutor", version = "0.1.0" }
async-trait = "0.1.79"
chrono = { version = "0.4.37", features = ["serde"] }
futures = "0.3.30"
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = { version = "0.7.*", features = [
  "postgres",
  "runtime-tokio-native-tls",
  "uuid",
  "json",
  "chrono",
  "migrate",
] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt", "macros", "sync", "time"] }
tracing = "0.1.40"
async-stream = "0.3.5"
fxhash = "0.2.1"
