[package]
name = "rexecutor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
chrono = "0.4.37"
futures = "0.3.30"
serde = "1.0.197"
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt", "macros", "sync", "time"] }
tracing = "0.1.40"
