[package]
name = "rexecutor"
version = "0.1.0"
edition = "2021"
# We need 1.75 for RPIT, however, currently we are using inspect_error, which was released in 1.76.0
# Should we remove inspect_error to set the MSRV to 1.75.0?
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# TODO: add features like rand, and cron.
# TODO: set version to older versions to enable building with projects with out of data deps.

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.79"
chrono = "0.4.37"
cron = "0.12.1"
futures = "0.3.30"
fxhash = "0.2.1"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt", "macros", "sync", "time"] }
tokio-util = "0.7.10"
tracing = "0.1.40"

[dev-dependencies]
assert_matches = "1.5.0"
chrono = {version = "0.4.37", features = ["serde"]}
mockall = "0.12.1"
serde = {version = "1.0.197", features = ["derive", "serde_derive"]}
tokio-stream = "0.1.15"
