[package]
name = "rexecutor"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"

# TODO: add features like rand, and cron.
# TODO: set version to older versions to enable building with projects with out of data deps.
authors = ["John Bell <bell.john.andrew@gmail.com>"]

license = "MIT OR Apache-2.0"

readme = "../README.md"
description = "A robust job processing library"
repository = "https://github.com/Johnabell/rexecutor.git"

keywords = ["job", "processing", "tasks"]
categories = ["asynchronous"]

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.79"
chrono = "0.4.37"
cron = "0.15"
futures = "0.3.30"
fxhash = "0.2.1"
rand = "0.9"
serde = "1.0.197"
serde_json = "1.0.115"
thiserror = "2.0"
tokio = { version = "1.37.0", features = ["rt", "macros", "sync", "time"] }
tokio-util = "0.7.10"
tracing = "0.1.40"

[dev-dependencies]
assert_matches = "1.5.0"
chrono = {version = "0.4.37", features = ["serde"]}
mockall = "0.13"
serde = {version = "1.0.197", features = ["derive", "serde_derive"]}
tokio-stream = "0.1.15"
